--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 plugins {
     id 'com.android.application' version '8.0.0' apply false
     id 'com.android.library' version '8.0.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
+    id("androidx.navigation.safeargs.kotlin") version "2.5.0" apply false
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.6.21" apply false
 }
