--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id("kotlin-kapt")
 }
 
 android {
@@ -10,6 +11,10 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 33
+
+
+
+
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -31,6 +36,12 @@ android {
 }
 
 dependencies {
+    implementation(project(":domain"))
+    kapt(libs.androidx.room.compiler)
+    implementation(libs.bundles.androidx.room)
+    implementation(libs.bundles.androidx.retrofit)
+    implementation(libs.koin.android)
+
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
