--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,9 +1,15 @@
 plugins {
-    id 'java-library'
-    id 'org.jetbrains.kotlin.jvm'
+    id("org.jetbrains.kotlin.jvm")
+    id("java-library")
+
 }
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
+}
+
+dependencies {
+    implementation(libs.kotlinx.coroutine)
+    implementation(libs.kotlinx.serialization)
 }
